<resources>
    <string name="app_name">lesson_7dom</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="_0">0</string>
    <string name="share_in">share_in</string>
    <string name="plus_minus">+|-</string>
    <string name="ostatok_ot_del">%</string>
    <string name="finishAllActivity">finishAllActivity</string>
    <string name="del">/</string>

</resources>