<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/container_btns">

        <TextView
            android:id="@+id/tv_result"
            android:layout_gravity="end|bottom"
            android:text="@string/_0"
            android:autoSizeTextType="uniform"
            android:textSize="@dimen/textSize"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/share"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_in" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_btns"
        android:paddingBottom="@dimen/paddingBottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="4"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                android:text="c"/>
            <com.google.android.material.button.MaterialButton

                style="@style/Button.Gray"
                android:layout_marginHorizontal="@dimen/layout_marginHorizontal"
                android:text="@string/plus_minus"
                android:textSize="30sp"
               />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:text="@string/ostatok_ot_del"
                android:layout_marginEnd="@dimen/layout_marginEnd"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_del"
                android:onClick="onOperationClick"
                android:text="@string/del"
                />

        </LinearLayout>
        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="7"/>
            <com.google.android.material.button.MaterialButton

                style="@style/Button.lightBlack"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"
                android:text="8"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_nine"
                android:text="9"
                android:onClick="onNumberClick"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_mul"
                android:text="*"
                android:onClick="onOperationClick"
                />

        </LinearLayout>
        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                android:text="4"/>
            <com.google.android.material.button.MaterialButton

                style="@style/Button.lightBlack"
                android:id="@+id/btn_five"
                android:layout_marginHorizontal="@dimen/layout_marginHorizontal"
                android:text="5"
                android:onClick="onNumberClick"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_six"
                android:text="6"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/layout_marginEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Button.Orange"
                android:text="-"
                android:onClick="onOperationClick"
                />

        </LinearLayout>
        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                android:text="1"/>
            <com.google.android.material.button.MaterialButton

                style="@style/Button.lightBlack"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/layout_marginHorizontal"
                android:text="2"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_three"
                android:text="3"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/layout_marginEnd"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:onClick="onOperationClick"
                android:id="@+id/btn_plus"
                android:text="+"
                />

        </LinearLayout>
        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:id="@+id/btn_zero"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"
                android:onClick="onNumberClick"
                android:text="0"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.lightBlack"
                android:text="."
                android:layout_marginHorizontal="@dimen/layout_marginHorizontal"

                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="="
                />

        </LinearLayout>

       </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>